# focusdot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  windows-build.yml
docs/: software-requirements.md
docs/superpowers/plans/: 2026-04-30-punto-cycles-and-ux.md  2026-04-30-punto-polish.md  2026-04-30-punto-tauri-pomodoro.md
scripts/: cargo-path.ps1  run-tauri.ps1  rust-path.ps1
src/: main.test.ts  main.ts  presets.test.ts  presets.ts  stats.test.ts  stats.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  history.rs  lib.rs  main.rs  notifications.rs  presets.rs  settings.rs  state.rs  stats.rs  storage.rs  timer.rs  tray.rs  window_layout.rs
src-tauri/tests/: history_stats_tests.rs  notifications_tests.rs  presets_tests.rs  settings_tests.rs  timer_tests.rs
