[package]
name = "focusdot"
version = "0.1.3"
description = "Minimalist system tray Pomodoro timer (focusdot)"
authors = ["focusdot"]
edition = "2021"

[lib]
name = "focusdot"
path = "src/lib.rs"

[[bin]]
name = "focusdot"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
assert_fs = "1"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
